# nekBench

./: CMakeLists.txt  build-nekBench.sh
axhelm/: CMakeLists.txt  kernelHelper.cpp  main.cpp
core/: meshSetup.cpp
nekBone/: CMakeLists.txt  setup.cpp
